Allow pinned header to be contained inside page width, scroll event listener

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -66,6 +66,19 @@ headerHeight && (style["--header-height"] = headerHeight + "px");
     <meta name="format-detection" content="telephone=no" />
 
     <Opengraph {title} {description} />
+
+    <script>
+      window.addEventListener(
+        "scroll",
+        (e) => {
+          document.documentElement.classList.toggle(
+            "scrolled",
+            window.scrollY > 100
+          );
+        },
+        { passive: true }
+      );
+    </script>
   </head>
   <body>
     {show_global_header && <Header {id} {paths} {currentPath} />}
